--- a/diseñoWeb/style.css
+++ b/diseñoWeb/style.css
@@ -1,52 +1,214 @@
-p{
-    text-align: center;  /* *propiedad : center*/
-    background-color: #CCCCCC;
+header{
+    background-color: #BBBBBB;
+    padding: 20px 0;
 }
 
-.tituloPrincipal{
-    padding-left: 30px;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
-#banner{
-    width: 100%;
+.caja{
+    position: relative;
+    width: 940px;
+    margin: 0 auto; /*TODO: centraliza; auto segun la pantalla*/
+
 }
-
-.principal{
-    background-color: #CCCCCC;
-    padding: 20px;
-}
-
-
-em strong{ /**el strong seguido de em (emphasis)*/
-    color: red;
-}
-
-.tituloCentralizado{
-    text-align: center;
-}
-
-#mision{
-    font-size: 20px;
-}
-
-
-.items{
-    font-style: italic;
-}
-
-.diferenciales{
-    background-color: white;
-    padding: 30px;
-}
-
-ul{
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+nav{
+    position: absolute;
+    top: 125px;
+    right: 0;
     
 }
 
-.imagendiff{
-    width: 50%;
+nav li{
+    display: inline; /** Que ocupe el tamaño real que se esta usando */
+    margin: 0 0 0 15px;
+}
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
 
+nav a:hover{ /*Captura de mov del mouse*/
+    color: orange;
+}
+
+.productos{
+    width: 940px; 
+    margin: 0 auto; /* Que los laterales los distribuya de manera auto segun pantalla */
+    padding: 50px;
+}
+
+.productos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%; /*TODO: cada cuadro ocupara el 30% del espacio =90% el 10% restante se distribuira entre ellos */
+    vertical-align: top;
+    margin: 0 1.5%; /*1.5 entre los espacios  izq derecha de los elementos (2 espacios por 3 elementos =6, entonces 1.5*6=9% */
+    /*90% de ocupacion + 9%= 99% de los 940px*/
+    padding: 30px 20px;
+    box-sizing: border-box; /*TODO: Propiedad que nos limita el padding indicando que no va a sobrepasar el ancho indicado por el width*/
+    border-color: #000000;
+    border-width: 2px; /*Para visualizar el borde*/
+    border-style: solid;
+    /*! Estas 3 lineas se puede simplificar con:*/
+    /*! border: 2px solid #000000*/
+    border-radius: 10px;
+
+}
+
+.productos li:hover{
+    border-color: orange;
+    font-size: 33px;
+
+}
+
+.productos li:active{ /*TODO: Para capturar el click*/
+    border-color: green;
+}
+
+.productos h2{
+    font-size: 30px;
+    font-weight: bold;
+
+}
+
+.productos li:hover h2{ /*!Forzar*/
+    font-size: 33px;
+}
+
+.decriptionP{
+    font-size: 18px;
+}
+
+.price{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer{
+    text-align: center;
+    background: url(/diseñoWeb/imagenes/imagenes/bg.jpg);
+    padding: 40px;
+}
+.copyright{
+    color: white;
+    font-size: 13px;
+    margin-top: 20px;
+    
+}
+
+main{ /*Centrar contenido del main*/
+    width: 940px; /*1970 de las pantallas*/
+    margin: 0 auto;
+}
+
+
+form{
+    margin: 40px 0;
+}
+
+form label, legend{
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+
+.input-padron{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox{
+    margin: 20px 0;
+}
+
+.envForm{
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white; /* Color de la fuente*/
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all; /*Demora en cambiar el hover puede ser propiedad especifica o todo lo que contenga hover con all*/
+    cursor: pointer;
+}
+
+.envForm:hover{
+    background: darkorange;
+    transform: scale(1.1); /*Si queremos utilizar mas usos para transform debemos agregarlas en la misma linea */
+
+}
+table{
+    margin:40 px 40px;
+}
+thead{
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td,th{
+    border: 1px solid black;
+    padding: 8px 15px;
+}
+
+/**CSS para home*/
+/*Aquí inicia el CSS para nuestra home*/
+.banner{
+    width: 100%;
+}
+
+
+.titulo-principal{ /* Estilo del h2 */
+    text-align: center; /* Centra el titulo */
+    font-size: 2em; /* 2 veces el tamaño fuente del navegador*/
+    margin: 0 0 1em;
+    clear:left; /* cualquier config despues del titulo que la limpie */
+}
+
+
+.principal p{ /* Espacio entre parrafos*/
+    margin: 0 0 1em;
+}
+
+
+.principal strong{
+    font-weight: bold;
+}
+
+
+.principal em{
+    font-style: italic;
+}
+
+
+.utensilios{
+    width: 120px; /* cambiando el tamaño de la imagen */
+    float:left; /* deja un espacio de sobra para reacomodar nuestra imagen*/
+    margin: 0 20px 20px 0; /* Sentido horario*/
+}
+
+.mapa{
+    padding: 3em 0;
+}
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+.imagenDiferenciales{
+    width: 60%;
+}
+
+.video{
+    width: 560px;
+    margin: 1em auto; /* centralizar*/
 }
