--- a/diseñoWeb/style.css
+++ b/diseñoWeb/style.css
@@ -101,10 +101,10 @@ footer{
     
 }
 
-main{ /*Centrar contenido del main*/
-    width: 940px; /*1970 de las pantallas*/
+/*main{ Centrar contenido del main
+    width: 940px; 1970 de las pantallas
     margin: 0 auto;
-}
+} */
 
 
 form{
@@ -166,6 +166,13 @@ td,th{
 .banner{
     width: 100%;
 }
+.principal{
+    padding: 3em 0;
+    background:#FEFEFE;
+    width: 940px; /*1970 de las pantallas*/
+    margin: 0 auto;
+
+}
 
 
 .titulo-principal{ /* Estilo del h2 */
@@ -199,12 +206,43 @@ td,th{
 
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888 );
 }
 .mapa p{
     margin: 0 0 2em;
     text-align: center;
 }
-.imagenDiferenciales{
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
+}
+
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+   
+}
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+.items{
+    line-height: 1.5;
+}
+
+
+.items:nth-child(3){ /*!Escojimos el 3er item*/
+    font-weight: bolder;
+
+}
+
+.imagen-diferenciales{
     width: 60%;
 }
 
